# quorom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  build_conclusions.md  codex_build_prompt_chain.md  evaluation_critique.md  implementation_plan.md  pyproject.toml  quorum_workflow_design.md  workflow_evaluation.md
.claude/: settings.local.json
prompts/: arbiter.txt  critic.txt  planner.txt  sql_generator.txt  synthesizer.txt
quorum/: __init__.py  state.py
quorum/llm/: __init__.py  anthropic_client.py  gemini_client.py  openai_client.py  utils.py
quorum/nodes/: __init__.py
quorum/schemas/: __init__.py  critique.py  plan.py  query.py  report.py
quorum/tools/: __init__.py  sql_validator.py
tests/: test_llm_clients.py  test_llm_utils.py  test_prompts.py  test_schemas.py  test_sql_validator.py
