[project]
name = "quorum"
version = "0.1.0"
description = "Agentic data analyst: natural language to Snowflake SQL to structured insight report."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.75.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "snowflake-connector-python>=3.12.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
